fixed vertical line width bug creating a horizontal scroll bar, removed any IE8 polyfills as it can't handle the transform so no real point, further fix required for < IE8

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,5 +132,5 @@ h5.title {
     border-left: 1px solid #444;
     height: 200px;
     margin-left: 50%;
-    width: 50%;
+    width: 1px;
 }
